<resources>
    <string name="app_name">Health Care App</string>
    <string name="email_or_username">Email or UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_via_facebook">Login Via Facebook</string>
    <string name="title_activity_home">Health App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
