<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_login"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/email_login_bg"
            android:drawableLeft="@drawable/ic_person_pin"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_pin"
            android:focusableInTouchMode="true"
            android:hint="@string/email_or_username"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email_field"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/email_login_bg"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_field"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button_bg"
            android:onClick="LoginClick"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ForgotClick"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/login_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_forgot_password"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_fb_bg"
            android:onClick="FBClick"
            android:padding="20dp"
            android:text="@string/login_via_facebook"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_fb"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#c0c0c0" />

            <TextView
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:onClick="SignUpClick"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>